--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 name: Cheatsheets
 markdown: redcarpet
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 pygments: true
 baseurl: http://glamb.github.io
